# fastapi_agent_template

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini
.agents/skills/fastapi-backend-scaffold/: SKILL.md
.agents/skills/fastapi-bdd-feature/: SKILL.md
alembic/: env.py
alembic/versions/: 88f095af7562_init.py
src/app/: main.py
src/domain/: errors.py  ports.py
